# control-research-copilot

./: .dockerignore  .gitignore  Dockerfile  README.md  api_main.py  config_manager.py  docker-compose.yml  global_context.py  llm_client.py  logger_config.py  main.py  output_manager.py  pyproject.toml  requirements-api.txt  requirements.txt  改进.md  运行.txt
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
agents/: __init__.py  architect.py  base.py  dsp_coder.py  engineer.py  scribe.py  simulator.py  supervisor.py  theorist.py
api/: __init__.py  app.py  models.py  routes.py  session_manager.py  ws_handler.py
core/: __init__.py  agent_history.py  events.py  json_logging.py  qt_adapter.py  rag.py  research_controller.py  research_orchestrator.py  signal_manager.py  skills.py  telemetry.py  workflow_definitions.py  workflow_engine.py
docs/: AGENT_INTERACTION_OPTIMIZATION.md
gui/: __init__.py  api_config_tab.py  constants.py  custom_research_tab.py  dashboard_charts.py  dashboard_dag.py  dashboard_tab.py  dashboard_timeline.py  dialogs.py  interaction_panel.py  main_window.py  research_console_tab.py  research_tab_base.py  widgets.py
prompts/: __init__.py  prompt_loader.py
prompts/control_systems/: architect.yaml  dsp_coder.yaml  engineer.yaml  scribe.yaml  simulator.yaml  supervisor.yaml  theorist.yaml  theory_kb.yaml
skills/: control_style.md
tests/: __init__.py  conftest.py  test_agent_parsing.py  test_api_app.py  test_api_models.py  test_api_routes.py  test_api_session_manager.py  test_api_ws_handler.py  test_base_agent.py  test_config_manager.py  test_events.py  test_logger.py  test_rag.py  test_skill_config.py  test_skills.py  test_workflow_engine.py
